infrastructure/kubernetes/ingress/patch-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: fnhs
