infrastructure/kubernetes/ingress/ingress-hello-world.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - fnhs.westeurope.cloudapp.azure.com
      secretName: fnhs.westeurope.cloudapp.azure.com
  rules:
    - host: fnhs.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world
              servicePort: 3030
